[project]
name = "lrn-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "altair>=5.5.0",
  "matplotlib>=3.10.1",
  "pip>=25.0.1",
  "plotly>=6.0.1",
  "py_wanderer",
  "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.4",
    "typer>=0.15.2",
]
