[project]
name = "lrn-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.1",
  "pip>=25.0.1",
  "plotly>=6.0.1",
  "py_wanderer",
  # "pygwalker>=0.4.9.15",
  "pydantic-extra-types>=2.10.3",
  "setuptools>=78.1.0",
  "streamlit>=1.44.1",
  # "streamlit-aggrid>=1.1.3",
  # "streamlit-navigation-bar>=3.3.0",
  # "streamlit-pandas-profiling>=0.1.3",
  # "streamlit-vis-timeline>=0.3.0",
  # "vega-datasets>=0.9.0",
  # "ydata-profiling>=4.12.2",
  "streamlit-pydantic==0.6.1rc3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.4",
    "typer>=0.15.2",
]
